--- a/Factory/resources/type.properties
+++ b/Factory/resources/type.properties
@@ -1,3 +1,3 @@
-left=LeftHair
-right=RightHair
-in=InHair
+left=com.knightly.hair.LeftHair
+right=com.knightly.hair.RightHair
+in=com.knightly.hair.InHair
